--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <script src="sketch.js"></script>
+    <section class="inputs">
+        <label for="wave-speed">
+            Wave speed
+            <input type="range" name="wave-speed" id="wave-speed" step="0.1" min="0.1" max="5" value="1">
+        </label>
+    
+        <label for="bg-color">
+            Bg Color
+            <input type="color" name="bg-color" id="bg-color" value="#ffffff">
+        </label>
+    
+        <label for="wave-color">
+            Wave color
+            <input type="color" name="wave-color" id="wave-color" value="#000000">
+        </label>
+
+        <label for="wave-weight">
+            Wave Thickness
+            <input type="range" name="wave-weight" id="wave-weight" min="0.1" max="50" step="0.5" value="1.5">
+        </label>
+    </section>
+
 </body>
 </html>
