🔍 add program name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+    <h1 class="logo">WSKETCH</h1>
     <section class="inputs">
         <label for="wave-speed">
             Wave speed
