--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 
     <h1 class="logo">WSKETCH</h1>
+    
+    <!-- inputs -->
     <section class="inputs">
         <label for="wave-speed">
             Wave speed
