--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
@@ -38,5 +38,6 @@
         </label>
     </section>
 
+    <script src="js/sketch.js"></script>
 </body>
 </html>
